# mommy-chaogu

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION-TUI-OVERHAUL.md  LICENSE  PLAN.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  railway.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  network-smoke.yml
data/: earnings_preview.json  flows_report_2026-06-29.md  quote_innovative_drug.json  semicon.db.bak  watchlist.db.bak  watchlist.json
data/supply_chains/: humanoid_robot.json  innovative_drug.json  materials.json  semiconductor.json
docker/: entrypoint.sh
docs/: AGENT-INTEGRATION-IMPLEMENTATION.md  AGENT-INTEGRATION-PLAN.md  AGENT-INTERACTION-GUIDE.md  AGENT-INTERFACE-EVOLUTION.md  BACKEND-CAPABILITIES.md  BACKTEST-REPORT.md  BRANCH-MERGE-ANALYSIS.md  CHANGELOG-2026-07-07.md  DATABASE-LIFECYCLE.md  DESIGN.md  DETAILED-ARCHITECTURE.md  EARNINGS-HANDBOOK.md  ENHANCEMENT-PLAN-2026-07-14.md  EVAL-BACKTEST-EARNINGS-2026-07-06.md  EVAL-BACKTEST-HISTORICAL-2026-07-06.md  EVAL-SAMPLES-2026-07-06.md  EVAL-SUMMARY-2026-07-06.md  EVALUATION-2026-07-05.md  EVALUATION-2026-07-14.md  GAP-ANALYSIS.md  KLINE-SPEC.md  LEDGER.md  MEMORY-SYSTEM-PLAN.md  PROGRESS.md  PROJECT-CAPABILITY-2026-07-06.md  PROJECT-LOG.md  RAILWAY-DEPLOYMENT.md  README.md  RELEASE-CHECKLIST.md  TECH-DEBT.md  USER-GUIDE.md  WEB-UI-PROPOSAL.md  zhihu-memory-system.md
docs/adr/: 0001-single-user-security-and-sessions.md
docs/archive/: DISCUSSION-NOTES.md  ENHANCEMENT-PLAN-2026-07-14.md  EVAL-CI-2026-07-06.md  EVAL-QUALITY-2026-07-06.md  EVALUATION-2026-07-14.md  EVALUATION-2026-07-18-backend.md  GAP-ANALYSIS.md  PRODUCTION-READINESS-FIXES.md  PROJECT-LOG.md  UX-IMPROVEMENTS-LEDGER.md  zhihu-article.md
frontend/: babel.config.js  package-lock.json  package.json  project.config.json  tsconfig.json
frontend/config/: index.ts
frontend/scripts/: post-build.sh
frontend/src/: App.vue  app.config.ts
reports/: .gitignore  2026-06-29.html  2026-07-03-innovative-drug.md  2026-07-06-earnings-analysis.md  README.md  index.html
scripts/: backtest_evolution.py  backtest_llm.py  backtest_stats.py  clean_supply_chains.py  cron_consolidate.sh  cron_verify.py  cron_verify.sh  demo_cache.py  demo_signals.py  fetch_semicon_data.py  load_earnings_preview.py  migrate.py  migrate_db_layout.py  migrate_signals_log.py  prepare_agent_backtest.py  quality.sh  rebuild_earnings_preview.py  seed_thematic_groups.py  show_quotes.py  smoke_docker.sh  smoke_market_data.py  smoke_migration.py
src/mommy_chaogu/: __init__.py  cli.py  cli_support.py  config.py  db.py  db_paths.py  setup.py  version.py
tests/: __init__.py  test_backtest.py  test_backtest_costs.py  test_backtest_portfolio.py  test_backtest_regime.py  test_backtest_scoring.py  test_backtest_stats.py  test_backtest_walk_forward.py  test_config.py  test_db_lifecycle.py  test_dockerfile.py  test_memory_cli.py  test_portfolio.py  test_railway_config.py  test_report_render.py  test_semicon_store.py  test_setup.py  test_tui_chat_ui.py  test_tui_formatting.py  test_tui_messages.py  test_tui_production_fixes.py  test_tui_slash.py  test_tui_smoke.py  test_version.py  test_web_cli_security.py
tests/earnings/: __init__.py  test_adapter.py  test_efinance_adapter.py  test_service.py  test_signals.py  test_store.py  test_types.py
tests/test_agent/: test_backfill.py  test_cli_maintenance.py  test_consolidator.py  test_episodic.py  test_extractor.py  test_fundamentals.py  test_memory.py  test_memory_pipeline.py  test_monitor.py  test_narrative.py  test_news.py  test_prediction_tracker.py  (+16 more)
web/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
(+257 files in other folders)
