[project]
name = "mommy-chaogu"
version = "0.1.0"
description = "妈妈炒股 - 给妈妈用的行情监控和投资陪伴工具"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "coffee-man666" }
]
dependencies = [
    "efinance>=0.5.8",
    "pandas>=2.2",
    "requests>=2.32",
    "sqlalchemy>=2.0",
]

[project.scripts]
mommy-watchlist = "mommy_chaogu.cli:main_watchlist"
mommy-monitor = "mommy_chaogu.cli:main_monitor"
mommy-chaogu = "mommy_chaogu.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mommy_chaogu"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
# E501: line too long (允许多行 dataclass 字段长)
# RUF003: ambiguous unicode characters — 中文 docstring/注释必然含全角符号
ignore = ["E501", "RUF001", "RUF002", "RUF003"]

[tool.mypy]
strict = true
python_version = "3.12"

[[tool.mypy.overrides]]
module = ["efinance", "pandas", "pandas.*", "rich", "retry", "tqdm", "multitasking", "jsonpath"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
markers = [
    "network: requires live efinance API access (东财接口)",
]
