[project]
name = "mommy-chaogu"
version = "0.1.0"
description = "妈妈炒股 - 给妈妈用的行情监控和投资陪伴工具"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "coffee-man666" }
]
dependencies = [
    "efinance>=0.5.8",
    "pandas>=2.2",
    "requests>=2.32",
    "sqlalchemy>=2.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "websockets>=13",
]

[project.scripts]
mommy-watchlist = "mommy_chaogu.cli:main_watchlist"
mommy-monitor = "mommy_chaogu.cli:main_monitor"
mommy-cache = "mommy_chaogu.cli:main_cache"
mommy-semicon = "mommy_chaogu.cli:main_semicon"
mommy-flows = "mommy_chaogu.cli:main_flows"
mommy-web = "mommy_chaogu.cli:main_web"
mommy-chaogu = "mommy_chaogu.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-requests",
    "httpx>=0.27",  # FastAPI 测试客户端
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mommy_chaogu"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
# E501: line too long (允许多行 dataclass 字段长)
# RUF003: ambiguous unicode characters — 中文 docstring/注释必然含全角符号
ignore = ["E501", "RUF001", "RUF002", "RUF003"]

[tool.mypy]
strict = true
python_version = "3.12"

[[tool.mypy.overrides]]
module = ["efinance", "pandas", "pandas.*", "rich", "retry", "tqdm", "multitasking", "jsonpath"]
ignore_missing_imports = true

# cache 模块涉及 JSON 反序列化，类型推导弱，整体放宽
[[tool.mypy.overrides]]
module = ["mommy_chaogu.cache.*"]
disallow_untyped_defs = false
disallow_any_explicit = false
ignore_errors = true

# TencentAdapter 用了大量 # type: ignore[override] 实现 Protocol
[[tool.mypy.overrides]]
module = ["mommy_chaogu.market_data.tencent_adapter", "mommy_chaogu.market_data.fallback_adapter"]
ignore_errors = true

# web 模块涉及 FastAPI 依赖注入和 Pydantic，类型相对弱
[[tool.mypy.overrides]]
module = ["mommy_chaogu.web.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["mommy_chaogu.cli"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["fastapi", "uvicorn", "starlette", "httpx"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
markers = [
    "network: requires live efinance API access (东财接口)",
]
